<resources>
    <string name="app_name">RentBuySellRepeat</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="delete">delete</string>
    <string name="product_image">Product Image</string>
    <string name="add_product">Add Product</string>
    <string name="log_out">Log Out</string>
    <string name="all_products">All Products</string>
    <string name="my_products">My Products</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="my_products_all_caps">MY PRODUCTS</string>
    <string name="more_details">More Details</string>
    <string name="loading">Loading...</string>
    <string name="select_a_title_for_your_product">Select a title for your product</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_categories">Select Categories</string>
    <string name="product_description">Product Description</string>
    <string name="select_description">Select Description</string>
    <string name="take_picture_using_camera">Take Picture Using Camera</string>
    <string name="upload_product_picture">Upload Product Picture</string>
    <string name="upload_picture_from_device">Upload Picture From Device</string>
    <string name="select_price">Select Price</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="rent">Rent</string>
    <string name="rent_price">Rent Price</string>
    <string name="summary">Summary</string>
    <string name="title">Title:</string>
    <string name="categories">Categories:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="to_rent">To Rent:</string>
    <string name="authentication_button">Authentication Button</string>
</resources>